# chat

./: .anjuta_sym_db.db  .gitignore  .gitmodules  .main.cpp.swp  .peer.cpp.swp  1  1.cpp  :make  AUTHORS  CMakeLists.txt  Ch2_1.cpp  Ch2_1.h  Chat.cpp  Doxyfile  GRAPH  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  a.out  abspeer.cxx  abspeer.h  aclocal.m4  action.yml  chat  chat.c  chat.cpp  chat.cppp  chat.cpppp  chat.cxx  chat.h  client  client.cpp  client.cxx  client.h  config.h  config.h.in  (+37 more)
.deps/: Chat.Po  chat.Po  chat.Tpo  client.Po  ipscan.Po  main.Po  message.Po  peer.Po  peer.Tpo  server.Po  thread.Po
Chapter1_Policies/: Chapter1.cpp  Makefile  pol
Chapter2_Techniques/: Ch2_1.cpp  a.out
MultiThread/: Makefile  merge  mergeknuth.cpp  mergeknuthmultit.cpp  mergemt
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
cpp-typelist/: CMakeCache.txt  Makefile  cmake_install.cmake  run_tests
docs/: abspeer_8h.html  abspeer_8h__dep__incl.dot  abspeer_8h__dep__incl.map  abspeer_8h__dep__incl.md5  abspeer_8h__incl.dot  abspeer_8h__incl.map  abspeer_8h__incl.md5  abspeer_8h_source.html  annotated.html  chat_8cpp.html  chat_8cpp__incl.dot  chat_8cpp__incl.map  chat_8cpp__incl.md5  chat_8cpp_a5fdc8d10654fe2e1130cae14de344b95_icgraph.dot  chat_8cpp_a6bd4d00ce1f074f5a80f78b7c055b63a_icgraph.dot  chat_8cpp_a83f8adca24e250bfb5c9a90a35503ae9_cgraph.dot  chat_8cpp_a83f8adca24e250bfb5c9a90a35503ae9_icgraph.dot  classAbsPar-members.html  classAbsPar.html  classAbsPar__coll__graph.dot  classAbsPar__inherit__graph.dot  classAbsPar_a71cf855176d1593ffc2382a917c95283_icgraph.dot  classChat-members.html  classChat.html  classChat__coll__graph.dot  classChat__inherit__graph.dot  classChat_a13342c244a8c1ecf994ae3cf24137d0a_icgraph.dot  classChat_a5d0ba35014f7468149fea81e034e496e_icgraph.dot  classChat_a78b2669c291ea47ede7b6f08320e0783_icgraph.dot  classChat_a816f1c23fd61e6e9eb5a76dacdc2091b_icgraph.dot  classChat_ac646c16ac251aa1100b5dd29efa15962_icgraph.dot  classClient-members.html  classClient.html  classClientPolicy-members.html  classClientPolicy.html  classClientPolicy__coll__graph.dot  classClientPolicy__inherit__graph.dot  classClientPolicy_a9a1d85ab95264349095110c2946b56f8_icgraph.dot  classClient__coll__graph.dot  classClient__inherit__graph.dot  (+151 more)
door/: Ch2_1.cpp  Ch2_1.h  Makefile  a.out
gcm.cache/: abspeer.gcm  client.gcm  ipscan.gcm  peer-client.gcm  peer.gcm  server.gcm  thread.gcm  uno.gcm
html/: README_8md.html  abspeer_8h.html  abspeer_8h__dep__incl.map  abspeer_8h__dep__incl.md5  abspeer_8h__incl.map  abspeer_8h__incl.md5  abspeer_8h_source.html  annotated.html  chat_8cpp.html  chat_8cpp__incl.map  chat_8cpp__incl.md5  classAbstractPeer-members.html  classAbstractPeer.html  classAbstractPeer__coll__graph.map  classAbstractPeer__coll__graph.md5  classAbstractPeer__inherit__graph.map  classAbstractPeer__inherit__graph.md5  classClient-members.html  classClient.html  classClient__coll__graph.md5  classConcreteClient-members.html  classConcreteClient.html  classConcreteClient__coll__graph.map  classConcreteClient__coll__graph.md5  classConcreteClient__inherit__graph.map  classConcreteServer-members.html  classConcreteServer.html  classConcreteServer__coll__graph.map  classConcreteServer__coll__graph.md5  classConcreteServer__inherit__graph.map  classConcreteServer__inherit__graph.md5  classPeer-members.html  classPeer.html  classPeer__coll__graph.map  classPeer__coll__graph.md5  classPeer__inherit__graph.map  classPeer__inherit__graph.md5  classServer-members.html  classServer.html  classServer__inherit__graph.md5  (+57 more)
include/: Doxyfile  Makefile.am  Makefile.in  abspeer.h  chat.cpp  chat.h  client.h  ipscan.h  message.h  policy.h  room.h  server.h  strategy.h  user.h
include/lib/: Makefile.am  client.cpp  libchat.la  libchat_la-server.lo
include/lib/.libs/: libchat.la  libchat.lai  libchat.so.0  libchat.so.0.0.0
ipscanner/: Makefile  a.out  main.cpp  scan
lambda/: Makefile  TODO  a.out  functpointer.cpp  lam.cpp  lambda.cpp  lambda1.cpp  lambda2.cpp
latex/: abspeer_8h.tex  abspeer_8h__dep__incl.md5  abspeer_8h__incl.md5  abspeer_8h_source.tex  annotated.tex  chat_8cpp.tex  chat_8cpp__incl.md5  classAbstractPeer.tex  classAbstractPeer__inherit__graph.md5  classConcreteClient.tex  classConcreteClient__coll__graph.md5  classConcreteClient__inherit__graph.md5  classConcreteServer.tex  classConcreteServer__inherit__graph.md5  classclient.tex  classclient__coll__graph.md5  classclient__inherit__graph.md5  classproxy.tex  classproxy2.tex  classproxy2__coll__graph.md5  classproxy__coll__graph.md5  classserver.tex  classserver__coll__graph.md5  client_8h.tex  client_8h__dep__incl.md5  client_8h__incl.md5  client_8h_source.tex  files.tex  hierarchy.tex  ipscan_8h.tex  ipscan_8h__dep__incl.md5  ipscan_8h__incl.md5  ipscan_8h_a30cf397be31be31a7c4202ecf4e149a2_icgraph.md5  ipscan_8h_a3fb17dbb3a93180d04626c3cfcb550fc_cgraph.md5  ipscan_8h_a3fb17dbb3a93180d04626c3cfcb550fc_icgraph.md5  ipscan_8h_a5a3ec7db7659e2ab075973ac327e134f_icgraph.md5  ipscan_8h_a5bcb7955d02231d690684148724e61b9_cgraph.md5  ipscan_8h_a5bcb7955d02231d690684148724e61b9_icgraph.md5  ipscan_8h_a83f7e4cf1bb3cc2a03995a458d805370_icgraph.md5  ipscan_8h_a8635fd75d9ec89144634578ff256fc65_icgraph.md5  (+24 more)
lib/: Makefile.am  Makefile.in  client.c  client.cpp  libchat.la  libchat_la-client.lo  server.c  server.cpp
lib/.libs/: libchat.lai  libchat.so.0.0.0
modfs/: Makefile  TODO  dir.c  file.c  inode.c  super.c1
module/: Makefile  a.out  main.cpp  speech.cpp  speech_impl.cpp  speech_impl1.cpp
modules/: a.out  main.cpp  speech.cpp  speech_impl.cpp  speech_impl1.cpp
modulesc++/: CMakeLists.txt  main.cpp  mymod.cpp
moduless/: Makefile  TODO  a.out  (+4 more)
src/: 1  Makefile.am  Makefile.in  chat  chat.cpp  chat.cpp.orig  client.cpp  main.cpp  main1.cpp  policy.cpp
tests/: Makefile.am  Makefile.in  TODO  client_test  client_test.cpp  server_test  server_test.cpp  test1  test2.cpp  test4
tests/.libs/: client_test  lt-client_test  lt-server_test  server_test
(+177 files in other folders)
