AUTOMAKE_OPTIONS=subdir-objects
lib_LIBRARIES=libchat.a
#lib_LTLIBRARIES=libchat.la
libchat_a_SOURCES=client.c server.c
#libchat_la_SOURCES=client.c server.c
#libchat_la_CFLAGS=-fPIC
#libchat_la_CPPFLAGS=-fPIC
#libchat_la_CXXFLAGS=-fPIC -I$(top_srcdir)/include -fpermissive
libchat_a_CFLAGS=-fPIC -I$(top_srcdir)/include -fpermissive -static 

