AM_CXXFLAGS = -fpermissive
top_srcdir=.
check_PROGRAMS = test1 client_test server_test test4
test1_SOURCES = test1.cpp 
client_test_SOURCES = client_test.cpp
client_test_CXXFLAGS= -I$(top_srcdir)/include  -fpermissive
client_test_LDADD= -lchat -L../libchat
server_test_SOURCES = server_test.cpp
server_test_CXXFLAGS= -I$(top_srcdir)/include  -fpermissive
server_test_LDADD= -lchat -L../libchat
test4_SOURCES = test4.cpp
TESTS = $(check_PROGRAMS)
